--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
   </footer>
 
   <!-- AI Chat Widget with Hugging Face Integration -->
-  <div id="chat-widget" class="fixed bottom-6 right-6 w-80 bg-gray-800 rounded-lg shadow-xl border border-gray-700 z-50 hidden">
-    <div class="bg-gray-900 px-4 py-3 flex justify-between items-center border-b border-gray-700">
+  <div id="chat-widget" class="fixed bottom-6 right-6 w-95 bg-gray-800 rounded-lg shadow-xl border border-gray-700 z-50 hidden">
+    <div class="bg-gray-900 px-4 py-3 flex justify-between items-center border-b border-gray-700 rounded-lg">
       <h3 class="text-white font-medium">Ask Me Anything</h3>
       <button id="close-chat" class="text-gray-400 hover:text-white focus:outline-none">
         <i class="fas fa-times"></i>
@@ -695,7 +695,7 @@
       </div>
     </div>
     
-    <div class="border-t border-gray-700 p-3 bg-gray-900">
+    <div class="border-t border-gray-700 p-3 bg-gray-900 rounded-b-lg">
       <div class="flex">
         <input id="chat-input" type="text" placeholder="Type your question..." class="flex-grow bg-gray-700 text-white px-3 py-2 rounded-l-md focus:outline-none focus:ring-1 focus:ring-blue-500">
         <button id="send-message" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-r-md">
@@ -706,8 +706,8 @@
   </div>
 
   <!-- Chat Toggle Button -->
-  <button id="chat-toggle" class="fixed bottom-6 right-6 bg-blue-500 hover:bg-blue-600 text-white w-12 h-12 rounded-full shadow-lg flex items-center justify-center z-40">
-    <i class="fas fa-comment-dots text-xl"></i>
+  <button id="chat-toggle" class="fixed bottom-6 right-6 bg-blue-500 hover:bg-blue-600 text-white w-48 h-12 rounded-full shadow-lg flex items-center justify-center z-40">
+    <i class="fas fa-comment-dots text-xl mr-2"></i> Saiprakash's AI
   </button>
 
   <!-- Back to Top Button -->
