--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <a href="#projects" class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white px-6 py-3 rounded-md font-medium transition duration-300 flex items-center">
               <i class="fas fa-code mr-2"></i> See My Work
             </a>
-            <a href="/assets/Saiprakash_Bollam.pdf" download class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white px-6 py-3 rounded-md font-medium transition duration-300 flex items-center">
+            <a href="./assets/Saiprakash_Bollam.pdf" download class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white px-6 py-3 rounded-md font-medium transition duration-300 flex items-center">
               <i class="fas fa-file-download mr-2"></i> Download Resume
             </a>
           </div>
@@ -231,7 +231,7 @@
         <div class="md:w-2/5 flex justify-center">
           <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-grey-800 shadow-lg transform hover:rotate-1 transition">
             <!-- Replace with your profile image -->
-            <img src="/assets/profile_photo.jpeg" alt="Saiprakash Bollam" class="w-full h-full object-cover">
+            <img src="./assets/profile_photo.jpeg" alt="Saiprakash Bollam" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-500 opacity-10"></div>
             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-4 text-center">
               <span class="text-xs font-mono bg-blue-500 text-white px-2 py-1 rounded-full">Currently coding in: US</span>
@@ -501,7 +501,7 @@
       </div>
       
       <div class="mt-12 text-center">
-        <a href="/assets/Saiprakash_Bollam.pdf" download class="inline-flex items-center bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md font-medium transition duration-300">
+        <a href="./assets/Saiprakash_Bollam.pdf" download class="inline-flex items-center bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md font-medium transition duration-300">
           <i class="fas fa-file-download mr-2"></i> Download Full Resume
         </a>
       </div>
