--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="card p-6">
               <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-4">
                 <div>
-                  <h3 class="text-xl font-bold text-white">AI Research Intern</h3>
+                  <h3 class="text-xl font-bold text-white">AI Software Engineer Intern</h3>
                   <p class="text-blue-400">State University of New York (SUNY)</p>
                 </div>
                 <div class="mt-2 md:mt-0">
@@ -398,7 +398,7 @@
             <div class="card p-6">
               <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-4">
                 <div>
-                  <h3 class="text-xl font-bold text-white">Graduate Student Developer</h3>
+                  <h3 class="text-xl font-bold text-white">Student Software Engineer</h3>
                   <p class="text-blue-400">Computer Science Dept., SUNY</p>
                 </div>
                 <div class="mt-2 md:mt-0">
